--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "next-client-cookies": "^1.1.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
