--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
-    "next-client-cookies": "^1.1.1",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
