--- a/.env
+++ b/.env
@@ -7,5 +7,6 @@
 DATABASE_URL="postgresql://mydatabase_omi7_user:h86LKSiIZDBG3b29teyyNnkU2YdK4pRB@dpg-cpu0hahu0jms73eh4go0-a.oregon-postgres.render.com/mydatabase_omi7"
 
 SECRET="this is my secret and i am not going to revealit"
-
-postgresql://mydatabase_omi7_user:h86LKSiIZDBG3b29teyyNnkU2YdK4pRB@dpg-cpu0hahu0jms73eh4go0-a.oregon-postgres.render.com/mydatabase_omi7
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="pulsehubcloud"
+NEXT_PUBLIC_CLOUDINARY_API_KEY="729586623814422"
+CLOUDINARY_API_SECRET="8EJIVpi4SU3YOGyPAwhMcSyOvM8"
