--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.8",
+    "@apollo/server": "^4.10.4",
+    "@as-integrations/next": "^3.0.0",
     "@prisma/client": "^5.16.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -22,14 +25,18 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "apollo-server-core": "^3.13.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "graphql": "^16.9.0",
+    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.407.0",
+    "lucide-react": "^0.408.0",
     "next": "14.2.5",
+    "next-cloudinary": "^6.6.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18",
@@ -48,7 +55,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
     "prisma": "^5.16.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3"
