--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://mydatabase_omi7_user:h86LKSiIZDBG3b29teyyNnkU2YdK4pRB@dpg-cpu0hahu0jms73eh4go0-a.oregon-postgres.render.com/mydatabase_omi7"
+# DATABASE_URL="postgresql://mydatabase_omi7_user:h86LKSiIZDBG3b29teyyNnkU2YdK4pRB@dpg-cpu0hahu0jms73eh4go0-a.oregon-postgres.render.com/mydatabase_omi7"
+DATABASE_URL="postgresql://default:WI9Urnfjk8lJ@ep-young-breeze-a4jd7x3g.us-east-1.aws.neon.tech:5432/verceldb"
 
 SECRET="this is my secret and i am not going to revealit"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="pulsehubcloud"
