--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@apollo/client": "^3.10.8",
     "@apollo/server": "^4.10.4",
     "@as-integrations/next": "^3.0.0",
-    "@prisma/client": "^5.16.2",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -25,11 +25,13 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "@vercel/speed-insights": "^1.0.12",
     "apollo-server-core": "^3.13.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "geist": "^1.3.1",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
@@ -54,7 +56,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint-config-next": "14.2.5",
-    "prisma": "^5.16.2",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3"
   }
