--- a/.env
+++ b/.env
@@ -1,13 +1,8 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-# DATABASE_URL="postgresql://mydatabase_omi7_user:h86LKSiIZDBG3b29teyyNnkU2YdK4pRB@dpg-cpu0hahu0jms73eh4go0-a.oregon-postgres.render.com/mydatabase_omi7"
-DATABASE_URL="postgresql://default:WI9Urnfjk8lJ@ep-young-breeze-a4jd7x3g.us-east-1.aws.neon.tech:5432/verceldb"
-
+# DATABASE_URL="postgresql://default:WI9Urnfjk8lJ@ep-young-breeze-a4jd7x3g.us-east-1.aws.neon.tech:5432/verceldb"
+CLOUDINARY_API_SECRET="8EJIVpi4SU3YOGyPAwhMcSyOvM8"
 SECRET="this is my secret and i am not going to revealit"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="pulsehubcloud"
 NEXT_PUBLIC_CLOUDINARY_API_KEY="729586623814422"
-CLOUDINARY_API_SECRET="8EJIVpi4SU3YOGyPAwhMcSyOvM8"
+
+DATABASE_URL="postgresql://admin:root@localhost:5432/postgres"
